example/gateway/otk/otk-dmz.yaml
apiVersion: security.brcmlabs.com/v1
kind: Gateway
metadata:
  name: otk-ssg-dmz
spec:
  version: "11.2.1"
  license:
    accept: true
    secretName: gateway-license
  app:
    replicas: 2
    image: docker.io/caapim/gateway:11.2.1
    imagePullPolicy: IfNotPresent
    updateStrategy:
      type: rollingUpdate
      rollingUpdate:
        maxUnavailable: 0
        maxSurge: 2
    resources: {}
      #requests:
      #  memory: 8Gi
      #  cpu: 3
      #limits:
      #  memory: 8Gi
      #  cpu: 3
    externalSecrets:
    - name: gateway-secret
      enabled: true
      variableReferencable: true
      description: Gateway Secret
    # ExternalKey for the OTK
    externalKeys:
    - name: otk-dmz-secret
      enabled: true
      alias: otk-dmz-key
      keyUsageType: "SSL"
    - name: otk-dmz-mtls-secret
      enabled: true
      alias: otk-dmz-mtls-key
      #keyUsageType: [""]
    externalCerts:
    - name: otk-dmz-mtls-public-cert
      enabled: true
      type: configMap
      revocationCheckPolicyType: USE_DEFAULT
      trustedFor: [SSL,SIGNING_SERVER_CERTS]
      trustAnchor: true
    - name: otk-internal-ca-cert
      enabled: true
      type: configMap
      revocationCheckPolicyType: USE_DEFAULT
      trustedFor: [SSL,SIGNING_SERVER_CERTS]
      trustAnchor: true
    otk:
      enabled: true
      initContainerImage: docker.io/caapim/otk-install:4.7.0
      type: dmz
      internalGateway:
        #url: https://gateway-internal-otk.brcmlabs.com:8443
        url: https://otk-ssg-internal.default.svc.cluster.local:8443
      port: 443
      database:
        type: mysql
        create: false
        auth: {}
        sql: {}
    customHosts:
      enabled: false
      hostAliases:
      - ip: 10.96.137.129
        hostnames:
        - gateway-internal-otk.brcmlabs.com
    autoscaling:
      enabled: false
    bundle:
      - type: restman
        source: secret
        name: restman-bootstrap-bundle
      - type: graphman
        source: secret
        name: graphman-bootstrap-bundle
    repositoryReferences:
      - name: l7-gw-myframework
        enabled: true
        type: static
        encryption:
          existingSecret: graphman-encryption-secret
          key: FRAMEWORK_ENCRYPTION_PASSPHRASE
      - name: l7-gw-myapis
        enabled: true
        type: dynamic
        encryption:
          existingSecret: graphman-encryption-secret
          key: APIS_ENCRYPTION_PASSPHRASE
      - name: l7-gw-mysubscriptions
        enabled: true
        type: dynamic
        encryption:
          existingSecret: graphman-encryption-secret
          key: SUBSCRIPTIONS_ENCRYPTION_PASSPHRASE
      - name: local-reference-repository
        enabled: true
        type: dynamic
        encryption: {}
#      - name: otk-customizations-dmz
#        enabled: false
#        type: dynamic
#        encryption: {}
    bootstrap:
      script:
        enabled: true
    initContainers: []
    hazelcast:
      external: false
      endpoint: hazelcast.example.com:5701
    management:
      secretName: gateway-secret
      #username: admin
      #password: 7layer
      # Management port requires a separate service...
      service:
        enabled: true
        annotations:
          projectcontour.io/upstream-protocol.tls: "9443"
        type: LoadBalancer
        ports:
        - name: management
          port: 9443
          targetPort: 9443
          protocol: TCP   
      restman:
        enabled: false
      graphman:
        enabled: true
        initContainerImage: docker.io/caapim/graphman-static-init:1.0.4
        dynamicSyncPort: 9443
      cluster:
        #password: 7layer
        hostname: gateway-dmz-otk.brcmlabs.com
      database:
        enabled: false # this runs the gateway in dbbacked/ephemeral mode
      #  jdbcUrl: "jdbc:mysql://cluster1-haproxy.pxc.svc.cluster.local:3306/ssg"
      #  username: "gateway"
      #  password: "ACm8BDr3Rfk2Flx9V"
    java:
      jvmHeap:
        calculate: true
        percentage: 50
        default: 4g
      extraArgs:
      - -Dcom.l7tech.server.audit.message.saveToInternal=false
      - -Dcom.l7tech.server.audit.admin.saveToInternal=false
      - -Dcom.l7tech.server.audit.system.saveToInternal=false
      - -Dcom.l7tech.server.audit.log.format=json
      - -Djava.util.logging.config.file=/opt/SecureSpan/Gateway/node/default/etc/conf/log-override.properties
      - -Dcom.l7tech.security.ssl.hostAllowWildcard=true
      - -Dcom.l7tech.server.pkix.useDefaultTrustAnchors=true
      #- -Dcom.l7tech.bootstrap.autoTrustSslKey=trustAnchor,TrustedFor.SSL,TrustedFor.SAML_ISSUER
    listenPorts:
      harden: true
      refreshOnKeyChanges: true
      custom:
        enabled: false
      ports: []
    cwp:
      enabled: true
      properties:
        - name: otk.port
          value: "443"
        - name: otk.dmz.private_key.name
          value: otk-dmz-mtls-key
        - name: io.httpsHostAllowWildcard
          value: "true"
        - name: log.levels
          value: |
            com.l7tech.level = CONFIG
            com.l7tech.server.policy.variable.ServerVariables.level = SEVERE
            com.l7tech.external.assertions.odata.server.producer.jdbc.GenerateSqlQuery.level = SEVERE
            com.l7tech.server.policy.assertion.ServerSetVariableAssertion.level = SEVERE
            com.l7tech.external.assertions.comparison.server.ServerComparisonAssertion.level = SEVERE
        - name: audit.setDetailLevel.FINE
          value: 152 7101 7103 9648 9645 7026 7027 4155 150 4716 4114 6306 4100 9655 150 151 11000 4104
    system:
      properties: |-
        # Default Gateway system properties
        # Configuration properties for shared state extensions.
        com.l7tech.server.extension.sharedKeyValueStoreProvider=embeddedhazelcast
        com.l7tech.server.extension.sharedCounterProvider=ssgdb
        com.l7tech.server.extension.sharedClusterInfoProvider=ssgdb
        # By default, FIPS module will block an RSA modulus from being used for encryption if it has been used for
        # signing, or visa-versa. Set true to disable this default behaviour and remain backwards compatible.
        com.l7tech.org.bouncycastle.rsa.allow_multi_use=true
        # Specifies the type of Trust Store (JKS/PKCS12) provided by AdoptOpenJDK that is used by Gateway.
        # Must be set correctly when Gateway is running in FIPS mode. If not specified it will default to PKCS12.
        javax.net.ssl.trustStoreType=jks
        com.l7tech.server.clusterStaleNodeCleanupTimeoutSeconds=86400
        # Additional properties go here
        com.l7tech.server.policy.assertion.ServerHttpRoutingAssertion.refreshOnKeyChanges=true
    service:
      annotations:
        projectcontour.io/upstream-protocol.tls: "8443"
      type: ClusterIP
      ports:
      - name: https
        port: 8443
        targetPort: 8443
        protocol: TCP
    ingress:
      enabled: true
      ingressClassName: contour
      annotations: {}
      tls:
      - hosts: 
        - gateway-dmz-otk.brcmlabs.com
        - gateway-dmz-otk-pm.brcmlabs.com
        secretName: brcmlabs
      rules:
      - host: gateway-dmz-otk.brcmlabs.com
      - host: gateway-dmz-otk-pm.brcmlabs.com
        http:
          paths:
          - backend:
              service:
                name: management
                port:
                  name: management
            path: /
            pathType: Prefix
