example/gateway/otk/otk-ssg-internal.yaml
apiVersion: security.brcmlabs.com/v1
kind: Gateway
metadata:
  name: otk-ssg-internal
spec:
  version: "11.1.3"
  license:
    accept: true
    secretName: gateway-license
  app:
    replicas: 1
    image: docker.io/caapim/gateway:11.1.3
    imagePullPolicy: IfNotPresent
    updateStrategy:
      type: rollingUpdate
      rollingUpdate:
        maxUnavailable: 0
        maxSurge: 2
    resources:
      requests:
        memory: 8Gi
        cpu: 3
      limits:
        memory: 8Gi
        cpu: 3
    # ExternalKeys with otk flag set to true for OTK-specific key usage
    externalKeys:
    - name: otk-internal-tls-secret
      enabled: true
      alias: otk-internal-key
      keyUsageType: SSL
      otk: true
    otk:
      enabled: true
      initContainerImage: docker.io/caapim/otk-install:4.6.4
      type: internal
      dmzGatewayReference: otk-ssg-dmz
      # DmzGatewayPort is used when the DMZ gateway is external (not managed by operator)
      # If not specified, defaults to 9443 or the gateway's graphmanDynamicSync port
      dmzGatewayPort: 9443
      # SyncIntervalSeconds determines how often DMZ and Internal gateways should update certificates
      # Defaults to RuntimeSyncIntervalSeconds if not specified, or 10 seconds if neither is set
      syncIntervalSeconds: 30
      # Reference to the TLS secret for Internal key (used by OTK reconciliation)
      internalKeySecret: otk-internal-tls-secret
      database:
        type: mysql
        create: true
        connectionName: OAuth
        auth:
          # A single secret containing all of the values defined here will be created
          # if existingSecret is set the corresponding gateway, readOnly or admin will be omitted from the secret
          # if no values are set, a secret will not be created or referenced and the deployment will be invalidated.
          # existingSecret: otk-db-secret
          gateway:
            username: otk_user
            password: otkUserPass
          readOnly:
           # username: readonly_user
            username: readonly_user
            password: readonly_userPass
          admin:
           # username: admin
            username: admin
            password: adminPass
        properties:
          minimumPoolSize: 3
          maximumPoolSize: 15
        sql:
          databaseName: otk_db
          #jdbcUrl: jdbc:mysql://<host>:<port>/<database>
          jdbcUrl: jdbc:mysql://mysql.brcmlabs.com:3306/otk_db_init
          jdbcDriverClass: com.mysql.cj.jdbc.Driver
          connectionProperties:
            c3p0.maxConnectionAge: "100"
            c3p0.maxIdleTime: "1000"
          manageSchema: true
          databaseWaitTimeout: 60
    autoscaling:
      enabled: false
    bundle:
      - type: restman
        source: secret
        name: restman-bootstrap-bundle
      - type: graphman
        source: secret
        name: graphman-bootstrap-bundle
    repositoryReferences:
      - name: l7-gw-myframework
        enabled: true
        type: static
        encryption:
          existingSecret: graphman-encryption-secret
          key: FRAMEWORK_ENCRYPTION_PASSPHRASE
      - name: l7-gw-myapis
        enabled: true
        type: dynamic
        encryption:
          existingSecret: graphman-encryption-secret
          key: APIS_ENCRYPTION_PASSPHRASE
      - name: l7-gw-mysubscriptions
        enabled: true
        type: dynamic
        encryption:
          existingSecret: graphman-encryption-secret
          key: SUBSCRIPTIONS_ENCRYPTION_PASSPHRASE
      - name: local-reference-repository
        enabled: true
        type: dynamic
        encryption: { }
      - name: otk-customizations-internal
        enabled: true
        type: dynamic
        encryption: { }
    bootstrap:
      script:
        enabled: true
    initContainers: []
    hazelcast:
      external: false
      endpoint: hazelcast.example.com:5701
    management:
      secretName: gateway-secret
      #username: admin
      #password: 7layer
      # Management port requires a separate service...
      service:
        enabled: false
        #annotations:
          # cloud.google.com/load-balancer-type: "Internal"
        type: LoadBalancer
        ports:
        - name: management
          port: 9443
          targetPort: 9443
          protocol: TCP   
      restman:
        enabled: false
      graphman:
        enabled: true
        initContainerImage: docker.io/caapim/graphman-static-init:1.0.4
      cluster:
        #password: 7layer
        hostname: gateway.brcmlabs.com
      database:
        enabled: false # this runs the gateway in dbbacked/ephemeral mode
      #  jdbcUrl: "jdbc:mysql://cluster1-haproxy.pxc.svc.cluster.local:3306/ssg"
      #  username: "gateway"
      #  password: "ACm8BDr3Rfk2Flx9V"
    java:
      jvmHeap:
        calculate: true
        percentage: 50
        default: 4g
      extraArgs:
      - -Dcom.l7tech.server.audit.message.saveToInternal=false
      - -Dcom.l7tech.server.audit.admin.saveToInternal=false
      - -Dcom.l7tech.server.audit.system.saveToInternal=false
      - -Dcom.l7tech.server.audit.log.format=json
      - -Djava.util.logging.config.file=/opt/SecureSpan/Gateway/node/default/etc/conf/log-override.properties
      - -Dcom.l7tech.security.ssl.hostAllowWildcard=true
      - -Dcom.l7tech.server.pkix.useDefaultTrustAnchors=true
      #- -Dcom.l7tech.bootstrap.autoTrustSslKey=trustAnchor,TrustedFor.SSL,TrustedFor.SAML_ISSUER
    listenPorts:
      harden: true
      custom:
        enabled: false
      ports: []
    cwp:
      enabled: true
      properties:
        - name: io.httpsHostAllowWildcard
          value: "true"
        - name: log.levels
          value: |
            com.l7tech.level = CONFIG
            com.l7tech.server.policy.variable.ServerVariables.level = SEVERE
            com.l7tech.external.assertions.odata.server.producer.jdbc.GenerateSqlQuery.level = SEVERE
            com.l7tech.server.policy.assertion.ServerSetVariableAssertion.level = SEVERE
            com.l7tech.external.assertions.comparison.server.ServerComparisonAssertion.level = SEVERE
        - name: audit.setDetailLevel.FINE
          value: 152 7101 7103 9648 9645 7026 7027 4155 150 4716 4114 6306 4100 9655 150 151 11000 4104
    system:
      properties: |-
        # Default Gateway system properties
        # Configuration properties for shared state extensions.
        com.l7tech.server.extension.sharedKeyValueStoreProvider=embeddedhazelcast
        com.l7tech.server.extension.sharedCounterProvider=ssgdb
        com.l7tech.server.extension.sharedClusterInfoProvider=ssgdb
        # By default, FIPS module will block an RSA modulus from being used for encryption if it has been used for
        # signing, or visa-versa. Set true to disable this default behaviour and remain backwards compatible.
        com.l7tech.org.bouncycastle.rsa.allow_multi_use=true
        # Specifies the type of Trust Store (JKS/PKCS12) provided by AdoptOpenJDK that is used by Gateway.
        # Must be set correctly when Gateway is running in FIPS mode. If not specified it will default to PKCS12.
        javax.net.ssl.trustStoreType=jks
        com.l7tech.server.clusterStaleNodeCleanupTimeoutSeconds=86400
        # Additional properties go here
    service:
      annotations:
        projectcontour.io/upstream-protocol.tls: "8443,9443"
      type: ClusterIP
      ports:
      - name: https
        port: 8443
        targetPort: 8443
        protocol: TCP
      - name: management
        port: 9443
        targetPort: 9443
        protocol: TCP   
    ingress:
      enabled: true
      ingressClassName: contour
      annotations: {}
      tls:
      - hosts: 
        - otk-ssg-internal.brcmlabs.com
        secretName: brcmlabs
      rules:
      - host: otk-ssg-internal.brcmlabs.com
    # containerSecurityContext:
    #   runAsNonRoot: true
    #   runAsUser: 1000669998
    #   capabilities:
    #     drop:
    #     - ALL
    #   allowPrivilegeEscalation: false
    # podSecurityContext:
    #   runAsUser: 1000669998
    #   runAsGroup: 1000669998
